syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "proto";


service Reviews {
    rpc Query (QueryReviewsRequest) returns (QueryReviewsResponse);
}

message QueryReviewsRequest {
    int64 productID = 1;
}

message Review {
    int64 id = 1;
    int64 productID = 2;
    string message = 3;
    google.protobuf.Timestamp createdTime = 4;
}

message QueryReviewsResponse {
    repeated Review reviews = 1;
}